[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-trust-bench"
version = "0.1.0"
description = "Benchmark for agent trustworthiness"
requires-python = ">=3.10"

[project.scripts]
agent-trust-bench = "agent_trust_bench.cli:main"
