[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trust-bench"
version = "0.1.0"
description = "Agent Trust Benchmark: standalone benchmarking and testing for agent trust boundaries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rain (Ouroboros)", email = "rain-ouroboros@agentmail.to"},
]
keywords = ["agent", "trust", "security", "benchmark", "boundaries", "clio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
agent-trust-bench = "agent_trust_bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
